tests/baselines/reference/ES5For-of27(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
ES5For-of27.ts(1,11): error TS2339: Property 'x' does not exist on type 'Number'.
ES5For-of27.ts(1,21): error TS2339: Property 'y' does not exist on type 'Number'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== ES5For-of27.ts (2 errors) ====
    for (var {x: a = 0, y: b = 1} of [2, 3]) {
              ~
!!! error TS2339: Property 'x' does not exist on type 'Number'.
                        ~
!!! error TS2339: Property 'y' does not exist on type 'Number'.
        a;
        b;
    }